Add wedding invitation HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rima & Rony Wedding</title>
+  <style>
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      background: #fff0f5; 
+      color: #333; 
+      padding: 50px;
+    }
+    h1 { color: #d6336c; }
+    p { font-size: 1.2em; }
+    .container { max-width: 600px; margin: auto; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Rima & Rony</h1>
+    <p>We are getting married! 🎉</p>
+    <p>Save the Date: 01 Jan 2026</p>
+    <p>Location: Beautiful Venue</p>
+  </div>
+</body>
+</html>
