Update wedding details for Emmanuel and Riya

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rima & Rony Wedding</title>
+  <title>Emmanuel & Riya Wedding</title>
   <style>
     body {
       margin: 0;
@@ -91,24 +91,24 @@
 
   <!-- Header -->
   <header>
-    <h1>Rima & Rony</h1>
+    <h1>Emmanuel & Riya</h1>
     <p>We are getting married! 🎉</p>
-    <p>Save the Date: 01 Jan 2026</p>
+    <p>Save the Date: 05 Aug 2026</p>
   </header>
 
   <!-- Our Story -->
   <section>
     <h2>Our Story</h2>
-    <p>It all began when Rima and Rony met… and the journey has been full of love, laughter, and adventures. Now, we are excited to celebrate our special day with you!</p>
+    <p>It all began when Emmanuel and Riya met… and the journey has been full of love, laughter, and adventures. Now, we are excited to celebrate our special day with you!</p>
   </section>
 
   <!-- Gallery -->
   <section>
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="image1.jpg" alt="Rima & Rony 1">
-      <img src="image2.jpg" alt="Rima & Rony 2">
-      <img src="image3.jpg" alt="Rima & Rony 3">
+      <img src="image1.jpg" alt="Emmanuel & Riya 1">
+      <img src="image2.jpg" alt="Emmanuel & Riya 2">
+      <img src="image3.jpg" alt="Emmanuel & Riya 3">
     </div>
   </section>
 
@@ -126,7 +126,7 @@
 
   <!-- Footer -->
   <footer>
-    ❤️ Made with love by Rima & Rony
+    ❤️ Made with love by Emmanuel & Riya
   </footer>
 
 </body>
