Update wedding date and RSVP button text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <header>
     <h1>Emmanuel & Riya</h1>
     <p>We are getting married! 🎉</p>
-    <p>Save the Date: 01 Jan 2026</p>
+    <p>Save the Date: 05 Aug 2026</p>
   </header>
 
   <!-- Our Story -->
@@ -114,12 +114,12 @@
 
   <!-- RSVP -->
   <section>
-    <h2>RSVP</h2>
+    <h2>Come Celebrate With Us 🥂</h2>
     <form action="https://formspree.io/f/your-form-id" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="_replyto" placeholder="Your Email" required>
       <textarea name="message" placeholder="Message / Comments"></textarea>
-      <button type="submit">Send RSVP</button>
+      <button type="submit"> Count Me In </button>
     </form>
     <p style="text-align:center; font-size:0.9em; color:#555;">*Form powered by Formspree (free, no backend needed)*</p>
   </section>
