--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join Emmanuel & Riya’s Wedding Celebration! 💖</title>
-  <meta name="description" content="Celebrate the love and wedding of Emmanuel & Riya on 01 Jan 2026.">
+  <meta name="description" content="Celebrate the love and wedding of Emmanuel & Riya on 05 Aug 2026.">
+
+  <!-- Open Graph Tags for social sharing -->
+  <meta property="og:title" content="Join Emmanuel & Riya’s Wedding Celebration! 💖">
+  <meta property="og:description" content="Celebrate the love and wedding of Emmanuel & Riya on 05 Aug 2026.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://rimarony.github.io/wedding-website/">
+  <meta property="og:image" content="https://rimarony.github.io/wedding-website/image1.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Join Emmanuel & Riya’s Wedding Celebration! 💖">
+  <meta name="twitter:description" content="Celebrate the love and wedding of Emmanuel & Riya on 05 Aug 2026.">
+  <meta name="twitter:image" content="https://rimarony.github.io/wedding-website/image1.jpg">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
