--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     /* Header / Hero Section */
     header {
       background: linear-gradient(135deg, #ffb6c1, #ff69b4);
-      color: white;
+      color: black;
       text-align: center;
       padding: 80px 20px;
     }
@@ -117,7 +117,7 @@
     }
     button {
       background: #d6336c;
-      color: white;
+      color: black;
       border: none;
       margin-top: 15px;
       cursor: pointer;
