--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     /* Body */
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Montserrat', Serif;
       background: #ffffff; /* white background */
       color: #000000; /* black text */
       line-height: 1.6;
